Ajuste a los Reportes 458,460 y 461

--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-460.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-460.jrxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.3310000000000024"/>
-	<property name="ireport.x" value="19"/>
-	<property name="ireport.y" value="125"/>
+	<property name="ireport.zoom" value="0.9090909090909117"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="zona" class="java.lang.String"/>
-	<parameter name="nombreComision" class="java.lang.String"/>
+	<parameter name="resolucionNumero" class="java.lang.String"/>
 	<parameter name="nombreAccionante" class="java.lang.String"/>
 	<parameter name="resolucionImpugnada" class="java.lang.String"/>
 	<parameter name="fecha" class="java.util.Date"/>
@@ -13,196 +13,209 @@
 	<parameter name="nombrePresidente" class="java.lang.String"/>
 	<parameter name="nombreSecretario" class="java.lang.String"/>
 	<parameter name="rutaImagen" class="java.lang.String"/>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
+	<title>
+		<band height="83">
+			<rectangle>
+				<reportElement x="-19" y="-19" width="593" height="101" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="7" y="17" width="522" height="44" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RESOLUCIÓN QUE RESUELVE UN RECURSO DE REPOSICIÓN EN CONTRA Y REMITE LA APELACIÓN]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="7" y="1" width="522" height="20" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ELECCIÓN DE DELEGADOS]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="41">
+			<image>
+				<reportElement x="229" y="0" width="119" height="39"/>
+				<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
+			</image>
+		</band>
+	</pageHeader>
 	<detail>
-		<band height="663">
+		<band height="538">
 			<frame>
-				<reportElement x="0" y="0" width="555" height="663" forecolor="#00B050"/>
+				<reportElement x="0" y="0" width="555" height="538" forecolor="#00B050"/>
 				<rectangle>
-					<reportElement x="0" y="0" width="555" height="82" forecolor="#7D933C" backcolor="#7D933C"/>
+					<reportElement x="18" y="7" width="537" height="31" forecolor="#000000" backcolor="#FFFFFF"/>
+				</rectangle>
+				<rectangle>
+					<reportElement x="18" y="38" width="537" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
 				</rectangle>
 				<staticText>
-					<reportElement x="5" y="0" width="550" height="82" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="14" isBold="true"/>
-					</textElement>
-					<text><![CDATA[ELECCIÓN DE DELEGADOS 2017-2020
-RESOLUCIÓN QUE RESUELVE UN RECURSO DE REPOSICIÓN
-EN CONTRA Y REMITE LA APELACIÓN]]></text>
-				</staticText>
-				<image>
-					<reportElement x="213" y="92" width="119" height="39"/>
-					<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
-				</image>
-				<rectangle>
-					<reportElement x="18" y="139" width="537" height="31" forecolor="#000000" backcolor="#FFFFFF"/>
-				</rectangle>
-				<rectangle>
-					<reportElement x="18" y="170" width="537" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="18" y="139" width="173" height="31" forecolor="#000000"/>
+					<reportElement x="18" y="7" width="173" height="31" forecolor="#000000"/>
 					<textElement markup="none">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<text><![CDATA[Zona Electrotal No.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="193" y="139" width="174" height="14"/>
+					<reportElement x="193" y="7" width="100" height="14"/>
 					<textElement textAlignment="Center">
 						<font isBold="false"/>
 					</textElement>
-					<text><![CDATA[Nombre Comision Electoral]]></text>
+					<text><![CDATA[Resolución N°]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="18" y="170" width="263" height="14"/>
+					<reportElement x="18" y="38" width="263" height="14"/>
 					<textElement/>
-					<text><![CDATA[Accionante: Apellido(s) y Nombre (s)]]></text>
+					<text><![CDATA[Accionante: Nombre(s) y Apellido(s)]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="282" y="171" width="121" height="33"/>
+					<reportElement x="282" y="39" width="121" height="33"/>
 					<textElement/>
 					<text><![CDATA[Resolución Impugnada
 No.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="438" y="171" width="50" height="20"/>
+					<reportElement x="438" y="39" width="50" height="20"/>
 					<textElement/>
 					<text><![CDATA[Fecha]]></text>
 				</staticText>
 				<line>
-					<reportElement x="191" y="139" width="1" height="31" forecolor="#000000" backcolor="#FFFFFF"/>
+					<reportElement x="191" y="7" width="1" height="31" forecolor="#000000" backcolor="#FFFFFF"/>
 				</line>
 				<line>
-					<reportElement x="437" y="170" width="1" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
+					<reportElement x="437" y="38" width="1" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
 				</line>
 				<line>
-					<reportElement x="281" y="170" width="1" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
+					<reportElement x="281" y="38" width="1" height="34" forecolor="#000000" backcolor="#FFFFFF"/>
 				</line>
 				<rectangle>
-					<reportElement x="18" y="224" width="537" height="360" forecolor="#000000"/>
+					<reportElement x="18" y="97" width="537" height="425" forecolor="#000000"/>
 				</rectangle>
 				<staticText>
-					<reportElement x="27" y="204" width="255" height="20"/>
+					<reportElement x="27" y="77" width="255" height="20"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<font size="11" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Análisis de los hechos presentados]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="27" y="237" width="528" height="47"/>
-					<textElement textAlignment="Left" lineSpacing="1_1_2">
-						<font size="11" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Una vez revisados los hechos planteados en el Recurso de Reposición, esta Comisión Electoral determinó NO aprobado el argumento de:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="18" y="378" width="537" height="66"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Por lo tanto no se modifica la Resolución No. _________
-La presente Resolución será comunicada a la dirección registrada en la Cooperativa para su notificación al Asociado y se concede el Recurso de Apelación]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="18" y="566" width="264" height="18" forecolor="#000000"/>
+					<reportElement x="345" y="465" width="174" height="18" forecolor="#000000"/>
 					<textElement textAlignment="Center">
 						<font size="12"/>
 					</textElement>
-					<text><![CDATA[Nombre Y Firma Secretario Comisión Electoral]]></text>
+					<text><![CDATA[Firma del secretario]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="18" y="500" width="264" height="18" forecolor="#000000"/>
+					<reportElement x="53" y="464" width="175" height="18" forecolor="#000000"/>
 					<textElement textAlignment="Center">
 						<font size="12"/>
 					</textElement>
-					<text><![CDATA[Nombre Y Firma Presidente Comisión Electoral]]></text>
+					<text><![CDATA[Firma del Presidente]]></text>
 				</staticText>
 				<line>
-					<reportElement x="18" y="500" width="525" height="1" forecolor="#000000"/>
+					<reportElement x="37" y="464" width="206" height="1" forecolor="#000000"/>
 				</line>
 				<line>
-					<reportElement x="18" y="564" width="525" height="1" forecolor="#000000"/>
+					<reportElement x="327" y="463" width="206" height="1" forecolor="#000000"/>
 				</line>
-				<rectangle>
-					<reportElement x="0" y="584" width="555" height="59" forecolor="#7D933C" backcolor="#7D933C"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="97" y="584" width="322" height="59" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="12" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
-				</staticText>
 				<textField>
-					<reportElement x="27" y="284" width="521" height="80"/>
+					<reportElement x="27" y="147" width="521" height="110"/>
 					<textElement lineSpacing="Single">
 						<font size="11"/>
 					</textElement>
 					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="18" y="184" width="263" height="20"/>
+					<reportElement x="18" y="52" width="263" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Top">
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="345" y="183" width="92" height="20"/>
+					<reportElement x="326" y="51" width="110" height="20"/>
 					<textElement textAlignment="Center">
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionImpugnada}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="237" y="378" width="56" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
+					<reportElement x="27" y="259" width="516" height="66"/>
+					<textElement textAlignment="Justified" verticalAlignment="Top">
+						<font size="11" isBold="false"/>
 					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion}]]></textFieldExpression>
+					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No."+$P{resolucion}+", por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
 				</textField>
 				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-					<reportElement x="438" y="184" width="117" height="19"/>
+					<reportElement x="438" y="52" width="117" height="19"/>
 					<textElement textAlignment="Center">
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="18" y="154" width="173" height="17"/>
+					<reportElement x="18" y="22" width="173" height="17"/>
 					<textElement textAlignment="Center">
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="191" y="153" width="364" height="17"/>
+					<reportElement x="220" y="20" width="273" height="17"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font isBold="true"/>
 					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreComision}]]></textFieldExpression>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="0" y="154" width="18" height="338"/>
+					<reportElement x="0" y="27" width="18" height="338"/>
 					<textElement rotation="Left">
 						<font size="8"/>
 					</textElement>
 					<text><![CDATA[Vigilada por la Superintendencia de la Economia Solidaria NIT.: 890.300.625-1]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="18" y="643" width="100" height="20"/>
-					<textElement/>
-					<text><![CDATA[CO-FT-460]]></text>
+					<reportElement x="27" y="329" width="516" height="55"/>
+					<textElement>
+						<font size="11"/>
+					</textElement>
+					<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="455" y="643" width="100" height="20"/>
-					<textElement textAlignment="Right"/>
-					<text><![CDATA[Mod.Agosto 2016]]></text>
+					<reportElement x="27" y="103" width="521" height="38"/>
+					<textElement>
+						<font size="11"/>
+					</textElement>
+					<text><![CDATA[Una vez revisados los hechos y argumentos planteados en el Recurso de Reposición, esta Comisión Electoral determinó NO procedente el argumento de:]]></text>
 				</staticText>
 			</frame>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="81">
+			<rectangle>
+				<reportElement x="-19" y="0" width="593" height="59" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="18" y="59" width="100" height="20"/>
+				<textElement/>
+				<text><![CDATA[CO-FT-460]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="455" y="59" width="100" height="20"/>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Mod.Septiembre 2021]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="97" y="0" width="322" height="59" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
 </jasperReport>
