--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.3310000000000024"/>
-	<property name="ireport.x" value="29"/>
-	<property name="ireport.y" value="150"/>
+	<property name="ireport.zoom" value="1.1000000000000039"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="637"/>
 	<parameter name="acta" class="java.lang.String"/>
 	<parameter name="nombreApelante" class="java.lang.String"/>
 	<parameter name="resolucionApelada" class="java.lang.String"/>
@@ -14,213 +14,248 @@
 	<parameter name="nombrePresidente" class="java.lang.String"/>
 	<parameter name="nombreSecretario" class="java.lang.String"/>
 	<parameter name="rutaImagen" class="java.lang.String"/>
+	<parameter name="resolucionNumero" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
+	<title>
+		<band height="86">
+			<rectangle>
+				<reportElement x="-19" y="0" width="595" height="86" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="5" y="39" width="543" height="46" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RESOLUCIÓN QUE RESUELVE UN RECURSO DE APELACIÓN FAVORABLE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="8" y="12" width="540" height="27" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Elección de Delegados]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="46">
+			<image>
+				<reportElement x="215" y="3" width="119" height="39"/>
+				<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
+			</image>
+		</band>
+	</pageHeader>
 	<detail>
-		<band height="713">
+		<band height="577">
 			<frame>
-				<reportElement x="0" y="0" width="555" height="713" forecolor="#00B050"/>
+				<reportElement x="0" y="8" width="555" height="565" forecolor="#00B050"/>
 				<rectangle>
-					<reportElement x="0" y="0" width="555" height="82" forecolor="#7D933C" backcolor="#7D933C"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="5" y="0" width="550" height="82" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="14" isBold="true"/>
-					</textElement>
-					<text><![CDATA[ELECCIÓN DE DELEGADOS 2017-2020
-RESOLUCIÓN QUE RESUELVE UN RECURSO DE
-APELACIÓN FAVORABLE]]></text>
-				</staticText>
-				<image>
-					<reportElement x="213" y="92" width="119" height="39"/>
-					<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
-				</image>
-				<rectangle>
-					<reportElement x="22" y="139" width="533" height="31" forecolor="#000000"/>
+					<reportElement x="22" y="8" width="533" height="31" forecolor="#000000"/>
 				</rectangle>
 				<rectangle>
-					<reportElement x="22" y="170" width="533" height="34" forecolor="#000000"/>
+					<reportElement x="22" y="70" width="533" height="34" forecolor="#000000"/>
 				</rectangle>
 				<staticText>
-					<reportElement x="455" y="695" width="100" height="18"/>
-					<textElement textAlignment="Right"/>
-					<text><![CDATA[Mod.Agosto 2016]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="193" y="139" width="174" height="14"/>
-					<textElement textAlignment="Center">
-						<font isBold="false"/>
-					</textElement>
-					<text><![CDATA[Apelante : Apellido (s) y Nombre (s)]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="22" y="170" width="115" height="34"/>
-					<textElement/>
-					<text><![CDATA[Resolucion Apelada
-No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="195" y="171" width="121" height="33"/>
-					<textElement/>
-					<text><![CDATA[Decisión de la Comisión
-Resolución No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="438" y="171" width="50" height="20"/>
-					<textElement/>
-					<text><![CDATA[Fecha]]></text>
-				</staticText>
-				<line>
-					<reportElement x="191" y="139" width="1" height="65" forecolor="#000000"/>
-				</line>
-				<line>
-					<reportElement x="437" y="170" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<rectangle>
-					<reportElement x="22" y="224" width="533" height="412" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="31" y="204" width="321" height="20"/>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Análisis de los hechos presentados]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="31" y="242" width="524" height="53"/>
-					<textElement textAlignment="Left" lineSpacing="1_1_2">
-						<font size="11" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Ha recibido este Tribunal según consta en el Acta No. _________ el Recurso intrepuesto y una vez revisados los hechos planteados por el Apelante se determinó probado el argumento de:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="31" y="378" width="524" height="20"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Por lo tanto se modifica la Resolución No. _________ y se describe la nueva decisión.]]></text>
-				</staticText>
-				<line>
-					<reportElement x="31" y="550" width="407" height="1" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="30" y="595" width="246" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Nombre Y Firma del Secretario]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="31" y="551" width="246" height="18" forecolor="#000000"/>
-					<textElement textAlignment="Center">
-						<font size="12"/>
-					</textElement>
-					<text><![CDATA[Nombre Y Firma del Presidente]]></text>
-				</staticText>
-				<line>
-					<reportElement x="30" y="594" width="407" height="1" forecolor="#000000"/>
-				</line>
-				<rectangle>
-					<reportElement x="0" y="636" width="555" height="59" forecolor="#7D933C" backcolor="#7D933C"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="97" y="636" width="322" height="59" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="12" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="31" y="295" width="517" height="69"/>
-					<textElement lineSpacing="Single">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="193" y="153" width="362" height="17"/>
-					<textElement textAlignment="Center" verticalAlignment="Bottom">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreApelante}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="37" y="184" width="154" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Top">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionApelada}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement mode="Transparent" x="97" y="151" width="94" height="19"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="267" y="183" width="170" height="20"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="297" y="242" width="55" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{actaTribunal}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="241" y="378" width="56" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionApelada}]]></textFieldExpression>
-				</textField>
-				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-					<reportElement x="438" y="184" width="117" height="19"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="31" y="405" width="517" height="53"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="31" y="458" width="517" height="47"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[La presente Resolución será comunicada a la dirección registrada en la Cooperativa para su notificación al interesado (basado en Art. 109 del Código Electoral).]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="8" y="131" width="14" height="361"/>
-					<textElement rotation="Left">
-						<font size="8"/>
-					</textElement>
-					<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="22" y="695" width="100" height="18"/>
-					<textElement/>
-					<text><![CDATA[CO-FT-461]]></text>
-				</staticText>
-				<staticText>
-					<reportElement mode="Transparent" x="22" y="139" width="169" height="31" forecolor="#000000"/>
+					<reportElement mode="Transparent" x="22" y="8" width="193" height="31" forecolor="#000000"/>
 					<textElement markup="none">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<text><![CDATA[Tribunal de Elecciones y Escrutinios
 Acta No.]]></text>
 				</staticText>
+				<staticText>
+					<reportElement x="22" y="70" width="115" height="34"/>
+					<textElement/>
+					<text><![CDATA[Resolucion Apelada
+No.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="195" y="71" width="121" height="33"/>
+					<textElement/>
+					<text><![CDATA[Decisión de la Comisión
+Resolución No.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="439" y="71" width="50" height="20"/>
+					<textElement/>
+					<text><![CDATA[Fecha]]></text>
+				</staticText>
+				<line>
+					<reportElement x="191" y="70" width="1" height="34" forecolor="#000000"/>
+				</line>
+				<line>
+					<reportElement x="437" y="71" width="1" height="34" forecolor="#000000"/>
+				</line>
+				<rectangle>
+					<reportElement x="22" y="156" width="533" height="407" forecolor="#000000"/>
+				</rectangle>
+				<staticText>
+					<reportElement x="31" y="118" width="321" height="20"/>
+					<textElement textAlignment="Left" verticalAlignment="Middle">
+						<font size="11" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Análisis de los hechos presentados]]></text>
+				</staticText>
+				<line>
+					<reportElement x="50" y="528" width="184" height="1" forecolor="#000000"/>
+				</line>
+				<staticText>
+					<reportElement x="345" y="529" width="167" height="18" forecolor="#000000"/>
+					<textElement textAlignment="Center">
+						<font size="12"/>
+					</textElement>
+					<text><![CDATA[Firma del secretario]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="66" y="528" width="150" height="18" forecolor="#000000"/>
+					<textElement textAlignment="Center">
+						<font size="12"/>
+					</textElement>
+					<text><![CDATA[Firma del Presidente]]></text>
+				</staticText>
+				<line>
+					<reportElement x="334" y="528" width="185" height="1" forecolor="#000000"/>
+				</line>
+				<textField>
+					<reportElement x="31" y="202" width="517" height="76"/>
+					<textElement lineSpacing="Single">
+						<font size="11"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
+				</textField>
+				<rectangle>
+					<reportElement x="22" y="39" width="533" height="31"/>
+				</rectangle>
+				<textField isBlankWhenNull="true">
+					<reportElement x="37" y="84" width="154" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Top">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionApelada}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement mode="Transparent" x="78" y="20" width="118" height="19"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="267" y="83" width="170" height="20"/>
+					<textElement textAlignment="Center">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="31" y="156" width="517" height="46"/>
+					<textElement textAlignment="Left" verticalAlignment="Top">
+						<font isBold="false"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No."+$P{actaTribunal}+" el Recurso interpuesto y una vez "+
+"revisados  los hechos y argumentos planteados por el Apelante  se determinó  procedente el argumento de:"]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="31" y="278" width="517" height="27"/>
+					<textElement textAlignment="Left" verticalAlignment="Top">
+						<font isBold="false"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se modifica la Resolución No."+$P{resolucionApelada}+" la cual queda así:"]]></textFieldExpression>
+				</textField>
+				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
+					<reportElement x="438" y="84" width="117" height="19"/>
+					<textElement textAlignment="Center">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="31" y="305" width="517" height="77"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement x="31" y="446" width="517" height="45"/>
+					<textElement lineSpacing="Single">
+						<font size="11"/>
+					</textElement>
+					<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="8" y="45" width="14" height="361"/>
+					<textElement rotation="Left">
+						<font size="8"/>
+					</textElement>
+					<text><![CDATA[Vigilado por la Superintendencia de la Economia Solidaria  NIT.:890.300.625-1]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="22" y="39" width="174" height="14"/>
+					<textElement textAlignment="Center">
+						<font isBold="false"/>
+					</textElement>
+					<text><![CDATA[ Apelante: Nombre(s) y Apellidos]]></text>
+				</staticText>
+				<textField isBlankWhenNull="true">
+					<reportElement x="31" y="51" width="516" height="17"/>
+					<textElement textAlignment="Center" verticalAlignment="Bottom">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreApelante}]]></textFieldExpression>
+				</textField>
+				<line>
+					<reportElement x="215" y="8" width="1" height="31"/>
+				</line>
+				<staticText>
+					<reportElement x="216" y="8" width="81" height="31"/>
+					<textElement/>
+					<text><![CDATA[Resolución N°]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="277" y="19" width="189" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font isBold="true"/>
+					</textElement>
+					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement x="30" y="425" width="517" height="21"/>
+					<textElement>
+						<font size="11"/>
+					</textElement>
+					<text><![CDATA[Se le hace saber que contra la presente Resolución NO procede ningún recurso.]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="31" y="382" width="516" height="60"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No.______, por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
+				</textField>
 			</frame>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="91">
+			<staticText>
+				<reportElement x="22" y="70" width="100" height="18"/>
+				<textElement/>
+				<text><![CDATA[CO-FT-461]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="455" y="70" width="100" height="18"/>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Mod.Septiembre 2021]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement x="-19" y="3" width="595" height="67" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="97" y="8" width="322" height="59" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
 </jasperReport>
