--- a/ELE.web/WebRoot/WEB-INF/reports/CO-FT-458.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/CO-FT-458.jrxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.4641000000000048"/>
+	<property name="ireport.zoom" value="1.210000000000005"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="128"/>
+	<property name="ireport.y" value="508"/>
 	<parameter name="zona" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
 	</parameter>
 	<parameter name="nombreAccionante" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
 	</parameter>
-	<parameter name="nombreComision" class="java.lang.String">
+	<parameter name="resolucionNumero" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
 	</parameter>
 	<parameter name="argumento" class="java.lang.String">
@@ -39,203 +39,214 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
+	<title>
+		<band height="70">
+			<rectangle>
+				<reportElement x="-19" y="-18" width="593" height="88" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="125" y="16" width="311" height="37" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RESOLUCION QUE RESULELVE RECURSO DE REPOSICIÓN FAVORABLEMENTE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="125" y="-4" width="311" height="20" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ELECCIÓN DE DELEGADOS]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="45">
+			<image>
+				<reportElement x="216" y="3" width="119" height="39"/>
+				<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
+			</image>
+		</band>
+	</pageHeader>
 	<detail>
-		<band height="672">
-			<frame>
-				<reportElement x="0" y="0" width="555" height="672" forecolor="#00B050"/>
-				<rectangle>
-					<reportElement x="0" y="0" width="555" height="68" forecolor="#7D933C" backcolor="#7D933C"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="125" y="0" width="311" height="68" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center">
-						<font size="14" isBold="true"/>
-					</textElement>
-					<text><![CDATA[ELECCIÓN DE DELEGADOS 2017-2020 RESOLUCION QUE RESULELVE RECURSO DE REPOSICIÓN FAVORABLEMENTE]]></text>
-				</staticText>
-				<image>
-					<reportElement x="213" y="75" width="119" height="39"/>
-					<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
-				</image>
-				<rectangle>
-					<reportElement mode="Transparent" x="26" y="125" width="529" height="31" forecolor="#000000"/>
-				</rectangle>
-				<line>
-					<reportElement x="191" y="125" width="1" height="31" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="26" y="124" width="162" height="15" forecolor="#000000"/>
-					<textElement markup="none">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Zonal Electoral No.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="414" y="158" width="41" height="14" forecolor="#000000"/>
-					<textElement markup="none">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Fecha]]></text>
-				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="26" y="139" width="162" height="17"/>
-					<textElement textAlignment="Center" verticalAlignment="Bottom">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
-				</textField>
-				<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-					<reportElement x="438" y="170" width="84" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Bottom">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
-				</textField>
-				<rectangle>
-					<reportElement x="26" y="213" width="529" height="375" forecolor="#000000"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="42" y="564" width="246" height="18" forecolor="#000000"/>
-					<textElement>
-						<font size="9"/>
-					</textElement>
-					<text><![CDATA[Firma Presidente Comisión Electoral]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="42" y="512" width="247" height="18" forecolor="#000000"/>
-					<textElement>
-						<font size="9"/>
-					</textElement>
-					<text><![CDATA[Nombre Presidente Comisión Electoral]]></text>
-				</staticText>
-				<line>
-					<reportElement x="42" y="512" width="368" height="1" forecolor="#000000"/>
-				</line>
-				<line>
-					<reportElement x="42" y="564" width="368" height="1" forecolor="#000000"/>
-				</line>
-				<rectangle>
-					<reportElement x="0" y="588" width="555" height="59" forecolor="#7D933C" backcolor="#7D933C"/>
-				</rectangle>
-				<staticText>
-					<reportElement x="97" y="588" width="322" height="59" forecolor="#FFFFFF"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="12" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="26" y="647" width="100" height="20"/>
-					<textElement/>
-					<text><![CDATA[CO-FT-458]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="455" y="647" width="100" height="20"/>
-					<textElement textAlignment="Right"/>
-					<text><![CDATA[Mod.Agosto 2016]]></text>
-				</staticText>
-				<line>
-					<reportElement x="408" y="156" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="267" y="158" width="141" height="28" forecolor="#000000"/>
-					<textElement>
-						<font size="10" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Resolución Impugnada No.]]></text>
-				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="265" y="170" width="138" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font isBold="false"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="42" y="190" width="314" height="20"/>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font size="11" isBold="true"/>
-					</textElement>
-					<text><![CDATA[Análisis de los hechos presentados]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="42" y="212" width="503" height="52"/>
-					<textElement textAlignment="Justified" lineSpacing="1_1_2">
-						<font size="11" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Una  vez revisados los hechos planteados en el Recurso de Reposición, esta Comisión Electoral determinó aprobado el argumento de:]]></text>
-				</staticText>
-				<textField>
-					<reportElement x="42" y="264" width="509" height="69"/>
-					<textElement lineSpacing="Single">
-						<font size="11"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="42" y="333" width="509" height="25"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Por lo tanto se modifica la Resolucion No. _______ y se escribe la nueva decisión: ]]></text>
-				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="42" y="358" width="503" height="81"/>
-					<textElement>
-						<font size="11" isBold="false"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="42" y="439" width="509" height="46"/>
-					<textElement lineSpacing="1_1_2">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[La presente Resolución será comunicada a la dirección registrada en la Cooperativa para su notificación al Asociado (basada en en Art. 109 del Código Electoral)]]></text>
-				</staticText>
-				<rectangle>
-					<reportElement mode="Transparent" x="26" y="156" width="529" height="34" forecolor="#000000"/>
-				</rectangle>
-				<line>
-					<reportElement x="265" y="156" width="1" height="34" forecolor="#000000"/>
-				</line>
-				<staticText>
-					<reportElement x="26" y="155" width="239" height="14"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<text><![CDATA[Accionante: Apellido (s) y Nombre (s)]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="192" y="125" width="164" height="14"/>
-					<textElement textAlignment="Center">
-						<font isBold="true"/>
-					</textElement>
-					<text><![CDATA[Nombre Comisión Electoral]]></text>
-				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="193" y="139" width="358" height="16"/>
-					<textElement textAlignment="Center" verticalAlignment="Bottom"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreComision}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="26" y="169" width="239" height="21"/>
-					<textElement verticalAlignment="Bottom"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="253" y="338" width="43" height="20"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion_mod}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="0" y="155" width="26" height="304"/>
-					<textElement rotation="Left">
-						<font size="8"/>
-					</textElement>
-					<text><![CDATA[Vigilado por la superintendencia de la Economia Solidaria NIT.:890.300.625-1]]></text>
-				</staticText>
-			</frame>
+		<band height="580">
+			<staticText>
+				<reportElement x="42" y="70" width="314" height="20"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Análisis de los hechos presentados]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement x="26" y="93" width="529" height="451" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="192" y="17" width="104" height="14"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Resolución N°]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="42" y="125" width="509" height="76"/>
+				<textElement lineSpacing="Single">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="26" y="0" width="162" height="15" forecolor="#000000"/>
+				<textElement markup="none">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Zonal Electoral No.]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement mode="Transparent" x="26" y="1" width="529" height="31" forecolor="#000000"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="414" y="34" width="41" height="14" forecolor="#000000"/>
+				<textElement markup="none">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Fecha]]></text>
+			</staticText>
+			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
+				<reportElement x="436" y="46" width="93" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="267" y="34" width="141" height="28" forecolor="#000000"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Resolución Impugnada No.]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="265" y="46" width="138" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="408" y="32" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<line>
+				<reportElement x="191" y="1" width="1" height="31" forecolor="#000000"/>
+			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement x="288" y="15" width="263" height="16"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="26" y="45" width="239" height="21"/>
+				<textElement verticalAlignment="Bottom"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="35" width="26" height="304"/>
+				<textElement rotation="Left">
+					<font size="8"/>
+				</textElement>
+				<text><![CDATA[Vigilado por la superintendencia de la Economia Solidaria NIT.:890.300.625-1]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="42" y="92" width="503" height="32"/>
+				<textElement textAlignment="Justified" lineSpacing="Single">
+					<font size="11" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Una vez revisados los hechos y argumentos planteados en el Recurso de Reposición, esta Comisión Electoral determinó procedente el argumento de:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="26" y="31" width="239" height="14"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Accionante:  Nombre (s) y Apellido (s)]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="42" y="204" width="503" height="40"/>
+				<textElement>
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se repone y en consecuencia se modifica la Resolución No."+$P{resolucion_mod}+ ", la cual quedara así:"]]></textFieldExpression>
+			</textField>
+			<rectangle>
+				<reportElement mode="Transparent" x="26" y="32" width="529" height="34" forecolor="#000000"/>
+			</rectangle>
+			<line>
+				<reportElement x="265" y="32" width="1" height="34" forecolor="#000000"/>
+			</line>
+			<staticText>
+				<reportElement x="42" y="508" width="246" height="18" forecolor="#000000"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[Firma Presidente Comisión Electoral]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="42" y="438" width="247" height="18" forecolor="#000000"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[Nombre Presidente Comisión Electoral]]></text>
+			</staticText>
+			<line>
+				<reportElement x="42" y="438" width="368" height="1" forecolor="#000000"/>
+			</line>
+			<line>
+				<reportElement x="42" y="508" width="368" height="1" forecolor="#000000"/>
+			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement x="42" y="246" width="503" height="81"/>
+				<textElement>
+					<font size="11" isBold="false"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="42" y="330" width="509" height="63"/>
+				<textElement lineSpacing="1_1_2">
+					<font size="11"/>
+				</textElement>
+				<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="26" y="15" width="162" height="17"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="92">
+			<rectangle>
+				<reportElement x="-19" y="0" width="593" height="72" forecolor="#009232" backcolor="#009232"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="97" y="8" width="322" height="59" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="72" width="100" height="20"/>
+				<textElement/>
+				<text><![CDATA[CO-FT-458]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="419" y="72" width="110" height="20"/>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Mod.Septiembre 2021]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
 </jasperReport>
