--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_210.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_210.jrxml
@@ -300,7 +300,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="83" height="30"/>
 									<textElement>
 										<font size="10"/>
@@ -320,7 +320,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="124" height="30"/>
 									<textElement>
 										<font size="10"/>
@@ -340,7 +340,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="104" height="30"/>
 									<textElement>
 										<font size="10"/>
@@ -505,7 +505,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="83" height="30"/>
 									<textElement>
 										<font size="10"/>
@@ -525,7 +525,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="124" height="30"/>
 									<textElement>
 										<font size="10"/>
@@ -545,7 +545,7 @@
 								</staticText>
 							</jr:columnHeader>
 							<jr:detailCell style="table 8_TD" height="30" rowSpan="1">
-								<textField>
+								<textField isBlankWhenNull="true">
 									<reportElement style="table 8_TD" x="0" y="0" width="104" height="30"/>
 									<textElement>
 										<font size="10"/>
